feat: Add comprehensive security audit test suite and documentation
- Add 8 specialized security test files covering:
  * Mathematical operation vulnerabilities (overflow, precision loss)
  * Race condition detection in concurrent operations
  * Slippage protection validation
  * Type safety and input validation
  * Price calculation security
  * SOL wrapping security
  * Advanced integration attack vectors
  * Phase 3 security validations

- Add complete security audit documentation:
  * FINAL_SECURITY_AUDIT_SUBMISSION.md - Executive summary
  * 9 detailed phase reports in SECURITY_TEST_REPORT_PHASE_DOCS/
  * 5 additional security notes in PHASE_ADDITIONAL_SECURITY_NOTES/
  * Test coverage reports and configurations

- Security vulnerabilities detected:
  * Input validation bypasses (null/undefined accepted)
  * Silent integer overflow in math operations
  * Floating-point precision loss in financial calculations
  * Race conditions in concurrent swap operations
  * Type coercion vulnerabilities
  * Insufficient slippage bounds validation

- Test framework enhancements:
  * Jest configuration for security testing
  * Integration test setup
  * Coverage reporting setup

BREAKING CHANGE: Security tests will fail until vulnerabilities are addressed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
-    "types": ["jsdom"],
+    "types": [
+      "jsdom",
+      "jest"
+    ],
     "target": "es2020",
     "module": "ES2015",
     "strict": true,
