--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Saros DLMM (Dynamic Liquidity Market Maker) - the engine that powers the Internet Capital Market on Solana.",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:unit": "jest --config jest.config.js tests/unit",
+    "test:integration": "jest --config jest.integration.config.js tests/e2e/comprehensive-integration-security.test.ts",
     "start": "tsdx watch --entry index.ts",
     "build": "tsdx build --entry index.ts",
     "lint": "tsdx lint",
@@ -24,9 +28,12 @@
     "tsdx": "^0.14.1"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.17.17",
     "@types/node": "^22.15.21",
+    "jest": "^30.1.3",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
